<?xml version="1.0" encoding="utf-8"?>
<!--
This file is part of BeepMe.

BeepMe is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

BeepMe is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with BeepMe. If not, see <http://www.gnu.org/licenses/>.

Copyright 2012-2014 Michael Glanznig
http://beepme.yourexp.at
-->

<resources>
    <string name="about_app_info">Helps you in performing experience sampling (DES/ESM) by delivering beeps at random times.</string>
    <string name="about_title">About BeepMe</string>
    <string name="about_email">E-Mail:</string>
    <string name="about_license">Copyright 2012&#8211;2014 Michael Glanznig.\nLicensed under GNU GPL v3 and provided AS IS without any warranty.</string>
    <string name="about_version">Version:</string>
    <string name="about_website">Website:</string>
    <string name="about_donate_button">Support BeepMe</string>
    <string name="action_about">About</string>
    <string name="action_beeper_off">Turn Beeper Off</string>
    <string name="action_beeper_on">Turn Beeper On</string>
    <string name="action_delete_moment">Delete Moment</string>
    <string name="action_edit_sample">Edit Moment</string>
    <string name="action_view_moment">View Moment</string>
    <string name="action_export">Export Data</string>
    <string name="action_settings">Settings</string>
    <string name="action_take_photo">Take Photo</string>
    <string name="action_change_photo">Change Photo</string>
    <string name="action_delete_photo">Delete Photo</string>
    <string name="action_test_beep">Generate Beep</string>
    <string name="add">Add</string>
    <string name="app_name">BeepMe</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="export_archive_estimated_size">Estimated archive size: %1$s</string>
    <string name="export_content_group_header">Archive Content</string>
    <string name="export_db_setting">Export raw data (SQLite)</string>
    <string name="export_downscale_original_size">original size (%1$s)</string>
    <string name="export_downscale">%1$s megapixels (%2$s)</string>
    <string name="export_failed">Export was not successful</string>
    <string name="export_mail_chooser_title">Send E-Mail with</string>
    <string name="export_mail_subject">BeepMe Data Export</string>
    <string name="export_no_mail_apps">No apps for E-Mail are available</string>
    <string name="export_photos_avg_size">The photos have an average size of %1$s megapixels.</string>
    <string name="export_photos_downscale">Downscale photos</string>
    <string name="export_photos_setting">Export photos</string>
    <string name="export_photos_group_header">Settings for Photos</string>
    <string name="export_post_actions_header">After Export</string>
    <string name="export_post_do_nothing">Do nothing</string>
    <string name="export_post_email">Send archive by E-Mail</string>
    <string name="export_running_data">Exporting your data</string>
    <string name="export_storage_error">Storage is not accessible</string>
    <string name="export_start_button">Start Export</string>
    <string name="export_successful">Export was successful</string>
    <string name="history">History</string>
    <string name="history_empty">You will find your sampling history here.</string>
    <string name="moment_delete_warning_title">Delete Moment</string>
    <string name="moment_delete_warning_msg">This cannot be undone. Really delete this moment?</string>
    <string name="new_sample">New Moment</string>
    <string name="new_sample_add_tag_error">Keyword has already been added.</string>
    <string name="new_sample_back_warning_msg">Please take some time to enter the details of your moment.\n\nIf you leave here your moment is saved as it is now. You can edit it later.</string>
    <string name="new_sample_back_warning_title">Leave now?</string>
    <string name="new_sample_moment">New moment</string>
    <string name="no">No</string>
    <string name="notify_content">Beeper is active</string>
    <string name="notify_title">BeepMe</string>
    <string name="notify_title_testmode">BeepMe (Test Mode)</string>
    <string name="pause_beeper">Pause Beeper</string>
    <string name="photo_delete_warning_title">Delete Photo</string>
    <string name="photo_delete_warning_msg">This cannot be undone. Really delete the photo?</string>
    <string name="pref_summary_pause_beeper_during_call">Prevents beeps during a phone call.</string>
    <string name="pref_title_pause_beeper_during_call">Do not disturb during call</string>
    <string name="pref_summary_test_mode">Helps to discover BeepMe. Data entered in this mode is stored separately.</string>
    <string name="pref_title_test_mode">Test Mode</string>
    <string name="pref_summary_vibrate_beep">Vibrate in addition to beep sound in normal profile.</string>
    <string name="pref_title_vibrate_beep">Always vibrate at beep</string>
    <string name="pref_summary_beep_sound">Choose between different beep sounds.</string>
    <string name="pref_title_beep_sound">Beep sound</string>
    <string name="project_info_title">About this project</string>
    <string name="project_info_project_name">Name</string>
    <string name="project_info_allowed">You may</string>
    <string name="project_info_forbidden">You may not</string>
    <string name="project_info_edit">edit moments</string>
    <string name="project_info_delete">delete moments</string>
    <string name="project_info_duration_until">for up to %1$s</string>
    <string name="project_info_duration_after">after %1$s</string>
    <string name="project_info_add_moment">Moments are created</string>
    <string name="project_info_add_moment_manually">manually</string>
    <string name="project_info_add_moment_timer">through alarms</string>
    <string name="project_info_add_moment_timer_random_interval">randomly, between every %1$s and %2$s</string>
    <string name="project_info_add_moment_timer_random_average">randomly, on average every %1$s</string>
    <string name="sample_description">How was your moment like?</string>
    <string name="sample_description_help">e.g. describe in fragments or full-text</string>
    <string name="sample_keyword">Keyword</string>
    <string name="sample_keywords">Keywords</string>
    <string name="sample_keywords_help">enter or select open keywords</string>
    <string name="sample_no_description_editable">No description for this moment yet.</string>
    <string name="sample_no_description">No description for this moment.</string>
    <string name="sample_no_keywords_editable">No keywords for this moment yet.</string>
    <string name="sample_no_keywords">No keywords for this moment.</string>
    <string name="sample_swipe_newer">Newer</string>
    <string name="sample_swipe_pos">%1$d of %2$d</string>
    <string name="sample_swipe_older">Older</string>
    <string name="sample_title">Title of moment</string>
    <string name="sample_title_help">e.g. summarizing keyword</string>
    <string name="sample_untitled">Untitled</string>
    <string name="samples">Moments</string>
    <string name="samples_list_no_samples">You will find your recorded moments here.</string>
    <string name="start_beeper">Start Beeper</string>
    <string name="time_beeper_active">Elapsed</string>
    <string name="today">Today</string>
    <string name="view_sample">View Moment</string>
    <string name="yes">Yes</string>
    
    <!-- these elements need not to be translated -->
    <string name="website_address">http://beepme.yourexp.at</string>
    <string name="email_address">contact@yourexp.at</string>
</resources>
