<?xml version="1.0" encoding="utf-8"?>
<!--
This file is part of BeepMe.

BeepMe is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

BeepMe is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with BeepMe. If not, see <http://www.gnu.org/licenses/>.

Copyright 2012-2014 Michael Glanznig
http://beepme.yourexp.at
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <CheckBoxPreference android:key="pauseBeeperDuringCall"
        android:title="@string/pref_title_pause_beeper_during_call"
        android:summary="@string/pref_summary_pause_beeper_during_call"
        android:defaultValue="true" />
    <CheckBoxPreference android:key="vibrateAtBeep"
        android:title="@string/pref_title_vibrate_beep"
        android:summary="@string/pref_summary_vibrate_beep"
        android:defaultValue="false" />
    <!-- <ListPreference android:key="timerProfileId"
        android:title="@string/pref_title_timer_profile"
        android:summary="@string/pref_summary_timer_profile"
        android:defaultValue="1" />-->
    <CheckBoxPreference android:key="testMode"
        android:title="@string/pref_title_test_mode"
        android:summary="@string/pref_summary_test_mode"
        android:defaultValue="false" />
</PreferenceScreen>