<?xml version="1.0" encoding="utf-8"?>
<!--
This file is part of BeepMe.

BeepMe is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

BeepMe is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with BeepMe. If not, see <http://www.gnu.org/licenses/>.

Copyright 2012-2014 Michael Glanznig
http://beepme.yourexp.at
-->

<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
  <item android:id="@+id/action_toggle_beeper"
      android:icon="@drawable/ic_menu_beeper_off"
      android:title="@string/action_beeper_off"
      android:showAsAction="always" />
  <item android:id="@+id/action_test_beep"
      android:icon="@drawable/ic_menu_test_beep"
      android:title="@string/action_test_beep"
      android:showAsAction="ifRoom" />
  <item android:id="@+id/action_export"
      android:icon="@drawable/ic_action_import_export"
      android:title="@string/action_export"
      android:showAsAction="ifRoom" />
    <!--todo: add icon for project info -->
  <item android:id="@+id/action_project_info"
      android:title="@string/project_info_title"
      android:showAsAction="never" />
  <item android:id="@+id/action_settings"
      android:icon="@drawable/ic_action_settings"
      android:title="@string/action_settings"
      android:showAsAction="never" />
  <item android:id="@+id/action_about"
      android:icon="@drawable/ic_action_about"
      android:title="@string/action_about"
      android:showAsAction="never" />
</menu>