<?xml version="1.0" encoding="utf-8"?>
<!--
This file is part of BeepMe.

BeepMe is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

BeepMe is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with BeepMe. If not, see <http://www.gnu.org/licenses/>.

Copyright 2012-2014 Michael Glanznig
http://beepme.yourexp.at
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/action_take_photo"
      android:title="@string/action_take_photo" />
    
    <item android:id="@+id/action_change_photo"
      android:title="@string/action_change_photo" />
    
    <item android:id="@+id/action_delete_photo"
      android:title="@string/action_delete_photo" />
</menu>
