<?xml version="1.0" encoding="utf-8"?>
<!--
This file is part of BeepMe.

BeepMe is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

BeepMe is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with BeepMe. If not, see <http://www.gnu.org/licenses/>.

Copyright 2012-2014 Michael Glanznig
http://beepme.yourexp.at
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/project_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:paddingTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_info_project_name"
                android:id="@+id/project_info_project_name_label"
                android:gravity="left"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingRight="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/project_info_project_name"
                android:gravity="right"
                android:textSize="16sp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_info_add_moment"
            android:id="@+id/project_info_add_moment_label"
            android:gravity="left"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/divider_gray" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/project_info_add_moment_manually"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/project_info_add_moment_manually_icon"
                android:src="@drawable/ic_action_new"
                android:paddingRight="16dp"
                android:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/project_info_add_moment_manually"
                android:id="@+id/project_info_add_moment_manually_text"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/project_info_add_moment_timer"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/project_info_add_moment_timer_icon"
                android:src="@drawable/ic_action_alarms"
                android:paddingRight="16dp"
                android:layout_gravity="center_vertical" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="@string/project_info_add_moment_timer"
                    android:id="@+id/project_info_add_moment_timer_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:id="@+id/project_info_add_moment_timer_info" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_info_allowed"
            android:id="@+id/project_info_allowed_label"
            android:gravity="left"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/divider_gray" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/project_info_allowed_edit"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/project_info_allowed_edit_icon"
                android:src="@drawable/ic_action_edit"
                android:paddingRight="16dp"
                android:layout_gravity="center_vertical" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="@string/project_info_edit"
                    android:id="@+id/project_info_allowed_edit_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:id="@+id/project_info_allowed_edit_duration" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/project_info_allowed_delete"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/project_info_allowed_delete_icon"
                android:src="@drawable/ic_action_delete"
                android:paddingRight="16dp"
                android:layout_gravity="center_vertical" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="@string/project_info_delete"
                    android:id="@+id/project_info_allowed_delete_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:id="@+id/project_info_allowed_delete_duration" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_info_forbidden"
            android:id="@+id/project_info_forbidden_label"
            android:gravity="left"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/divider_gray" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/project_info_forbidden_edit"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/project_info_forbidden_edit_icon"
                android:src="@drawable/ic_action_edit"
                android:paddingRight="16dp"
                android:layout_gravity="center_vertical" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="@string/project_info_edit"
                    android:id="@+id/project_info_forbidden_edit_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:id="@+id/project_info_forbidden_edit_duration" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/project_info_forbidden_delete"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/project_info_forbidden_delete_icon"
                android:src="@drawable/ic_action_delete"
                android:paddingRight="16dp"
                android:layout_gravity="center_vertical" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="@string/project_info_delete"
                    android:id="@+id/project_info_forbidden_delete_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:id="@+id/project_info_forbidden_delete_duration" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>